Use JDK 11 and keycloak libraries version 15.0.2